--- a/index.html
+++ b/index.html
@@ -524,6 +524,68 @@
             font-size: 14px;
         }
 
+        /* Contact Section */
+        .contact {
+            padding: 100px 20px;
+            max-width: 800px;
+            margin: 0 auto;
+        }
+
+        .contact-links {
+            display: flex;
+            justify-content: center;
+            gap: 32px;
+            flex-wrap: wrap;
+            margin-top: 48px;
+        }
+
+        .contact-card {
+            background: var(--bg-card);
+            border: 1px solid var(--border);
+            border-radius: 16px;
+            padding: 32px 48px;
+            text-decoration: none;
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            gap: 12px;
+            transition: all 0.3s;
+            min-width: 200px;
+        }
+
+        .contact-card:hover {
+            border-color: var(--accent);
+            transform: translateY(-4px);
+            box-shadow: 0 20px 40px rgba(0, 0, 0, 0.3);
+        }
+
+        .contact-icon {
+            width: 56px;
+            height: 56px;
+            background: linear-gradient(135deg, var(--accent) 0%, var(--accent-muted) 100%);
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+
+        .contact-icon svg {
+            width: 28px;
+            height: 28px;
+            color: var(--bg-primary);
+        }
+
+        .contact-label {
+            font-size: 14px;
+            color: var(--text-secondary);
+        }
+
+        .contact-value {
+            font-size: 16px;
+            font-weight: 600;
+            color: var(--text-primary);
+        }
+
         /* Mobile */
         @media (max-width: 768px) {
             nav {
@@ -566,6 +628,7 @@
             <li><a href="#features">Features</a></li>
             <li><a href="#ai">AI Assistant</a></li>
             <li><a href="#security">Security</a></li>
+            <li><a href="#contact">Contact</a></li>
         </ul>
         <a href="#download" class="nav-cta">Download</a>
     </nav>
@@ -799,6 +862,35 @@
         </div>
     </section>
 
+    <!-- Contact Section -->
+    <section class="contact" id="contact">
+        <div class="section-title">
+            <h2>Get in Touch</h2>
+            <p>Have questions? We'd love to hear from you</p>
+        </div>
+        <div class="contact-links">
+            <a href="mailto:obfus@tutamail.com" class="contact-card">
+                <div class="contact-icon">
+                    <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                        <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/>
+                        <polyline points="22,6 12,13 2,6"/>
+                    </svg>
+                </div>
+                <span class="contact-label">Email</span>
+                <span class="contact-value">obfus@tutamail.com</span>
+            </a>
+            <a href="https://t.me/obfus_dev" target="_blank" class="contact-card">
+                <div class="contact-icon">
+                    <svg viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M11.944 0A12 12 0 0 0 0 12a12 12 0 0 0 12 12 12 12 0 0 0 12-12A12 12 0 0 0 12 0a12 12 0 0 0-.056 0zm4.962 7.224c.1-.002.321.023.465.14a.506.506 0 0 1 .171.325c.016.093.036.306.02.472-.18 1.898-.962 6.502-1.36 8.627-.168.9-.499 1.201-.82 1.23-.696.065-1.225-.46-1.9-.902-1.056-.693-1.653-1.124-2.678-1.8-1.185-.78-.417-1.21.258-1.91.177-.184 3.247-2.977 3.307-3.23.007-.032.014-.15-.056-.212s-.174-.041-.249-.024c-.106.024-1.793 1.14-5.061 3.345-.48.33-.913.49-1.302.48-.428-.008-1.252-.241-1.865-.44-.752-.245-1.349-.374-1.297-.789.027-.216.325-.437.893-.663 3.498-1.524 5.83-2.529 6.998-3.014 3.332-1.386 4.025-1.627 4.476-1.635z"/>
+                    </svg>
+                </div>
+                <span class="contact-label">Telegram</span>
+                <span class="contact-value">@obfus_dev</span>
+            </a>
+        </div>
+    </section>
+
     <!-- Footer -->
     <footer>
         <div class="footer-content">
@@ -808,9 +900,9 @@
             </div>
             <div class="footer-links">
                 <a href="https://github.com/obfus-dev/obfus-app" target="_blank">GitHub</a>
+                <a href="https://t.me/obfus_dev" target="_blank">Telegram</a>
+                <a href="mailto:obfus@tutamail.com">Email</a>
                 <a href="#features">Features</a>
-                <a href="#security">Security</a>
-                <a href="#download">Download</a>
             </div>
             <div class="footer-copy">
                 &copy; 2026 Obfus. Privacy is a basic human right.
