Add Ethereum address obfus.eth

--- a/index.html
+++ b/index.html
@@ -888,6 +888,15 @@
                 <span class="contact-label">Telegram</span>
                 <span class="contact-value">@obfus_dev</span>
             </a>
+            <a href="https://etherscan.io/name-lookup-search?id=obfus.eth" target="_blank" class="contact-card">
+                <div class="contact-icon">
+                    <svg viewBox="0 0 24 24" fill="currentColor">
+                        <path d="M11.944 17.97L4.58 13.62 11.943 24l7.37-10.38-7.372 4.35h.003zM12.056 0L4.69 12.223l7.365 4.354 7.365-4.35L12.056 0z"/>
+                    </svg>
+                </div>
+                <span class="contact-label">Ethereum</span>
+                <span class="contact-value">obfus.eth</span>
+            </a>
         </div>
     </section>
 
